src/test/deca/context/invalid/created/assign/assign_class_int.deca
// Description :
//    test  assign entre une classe et un int
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.28) Les types A et int sont incompatibles pour l’affectation

class A {}
{
A a = new A();;
int b;
b = a;
}